--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <div class="container">
       <div class="plannerpanel planner-options planner-form" id="planner-options-panel">
         <form role="form" class="planner-options-form validateDontSubmit" id="planner-options-form">
-          <div class="input-group input-group-lg" id="planner-options-inputgroup-from">
+          <div class="input-group input-group-lg planner-options-inputgroup-from" id="planner-options-inputgroup-from">
             <label class="input-group-addon planner-options-input-addon required" for="planner-options-from">Van</label>
-            <input id="planner-options-from" type="text" title="Van" aria-required="true" class="form-control" placeholder="Station,halte" x-webkit-speech="x-webkit-speech" required="required">
+            <input id="planner-options-from" type="text" title="Van" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required">
             <input id="planner-options-from-latlng" type="hidden">
           </div>
           <div class="input-group input-group-lg hidden" aria-hidden="true" id="planner-options-inputgroup-via">
             <label class="input-group-addon planner-options-input-addon" for="planner-options-via">Via</label>
-            <input id="planner-options-via" type="text" title="Via" aria-required="true" class="form-control" placeholder="Station,halte" x-webkit-speech="x-webkit-speech">
+            <input id="planner-options-via" type="text" title="Via" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech">
             <div id="planner-options-via-autocompletecontainer"></div>
             <input id="planner-options-via-latlng" type="hidden">
           </div>
-          <div class="input-group input-group-lg" id="planner-options-inputgroup-dest">
+          <div class="input-group input-group-lg planner-options-inputgroup-dest" id="planner-options-inputgroup-dest">
             <label class="input-group-addon planner-options-input-addon required" for="planner-options-dest">Naar</label>
-            <input id="planner-options-dest" type="text" title="Naar" aria-required="true" class="form-control" placeholder="Station,halte" x-webkit-speech="x-webkit-speech" required="required">
+            <input id="planner-options-dest" type="text" title="Naar" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required">
             <input id="planner-options-dest-latlng" type="hidden">
           </div>
           <div class="row">
@@ -45,7 +45,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
               <div class="input-group input-group-lg planner-options-dateinput" id="planner-options-inputgroup-date">
                 <label class="input-group-addon planner-options-input-addon" for="planner-options-date">Datum</label>
-                <input id="planner-options-date" type="date" title="datum" aria-described-by="planner-options-dateformat" aria-required="true" class="form-control" required="required" min="2013-12-15" max="2014-01-16" value="2013-10-20">
+                <input id="planner-options-date" type="date" title="datum" aria-described-by="planner-options-dateformat" aria-required="true" class="form-control" required="required" min="2014-03-08" max="2014-04-01" value="2014-03-08">
                 <div class="input-group-addon planner-options-input-addon" id="planner-options-dateformat">mm-dd-jj
                 </div>
               </div>
@@ -83,8 +83,6 @@
     <script type="text/javascript" src="assets/js/jquery-scrollto.js"></script>
     <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/Form.js"></script>
- <!--   <a href="https://github.com/skywave"><img style="position: absolute; top: 0; right: 0; border: 0; width: 15%; max-width: 149px;" 
-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>-->
   </body>
 
 </html>
