--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         <form role="form" class="planner-options-form validateDontSubmit" id="planner-options-form">
           <div class="input-group input-group-lg planner-options-inputgroup-from" id="planner-options-inputgroup-from">
             <label class="input-group-addon planner-options-input-addon required" for="planner-options-from">Van</label>
-            <input id="planner-options-from" type="text" title="Van" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required">
-            <input id="planner-options-from-latlng" type="hidden">
+            <input id="planner-options-from" type="text" title="Van" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required" />
+            <input id="planner-options-from-latlng" type="hidden" />
           </div>
           <div class="input-group input-group-lg hidden" aria-hidden="true" id="planner-options-inputgroup-via">
             <label class="input-group-addon planner-options-input-addon" for="planner-options-via">Via</label>
-            <input id="planner-options-via" type="text" title="Via" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech">
+            <input id="planner-options-via" type="text" title="Via" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" />
             <div id="planner-options-via-autocompletecontainer"></div>
-            <input id="planner-options-via-latlng" type="hidden">
+            <input id="planner-options-via-latlng" type="hidden" />
           </div>
           <div class="input-group input-group-lg planner-options-inputgroup-dest" id="planner-options-inputgroup-dest">
             <label class="input-group-addon planner-options-input-addon required" for="planner-options-dest">Naar</label>
-            <input id="planner-options-dest" type="text" title="Naar" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required">
-            <input id="planner-options-dest-latlng" type="hidden">
+            <input id="planner-options-dest" type="text" title="Naar" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required" />
+            <input id="planner-options-dest-latlng" type="hidden" />
           </div>
           <div class="row">
             <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
               <div class="input-group input-group-lg planner-options-dateinput" id="planner-options-inputgroup-time">
                 <label class="input-group-addon planner-options-input-addon" for="planner-options-time">Tijd</label>
-                <input id="planner-options-time" type="time" title="Tijd" aria-described-by="planner-options-timeformat" aria-required="true" class="form-control" required="required">
+                <input id="planner-options-time" type="time" title="Tijd" aria-described-by="planner-options-timeformat" aria-required="true" class="form-control" required="required" />
                 <div class="input-group-addon planner-options-input-addon" id="planner-options-timeformat">hh:mm
                 </div>
               </div>
@@ -45,9 +45,8 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
               <div class="input-group input-group-lg planner-options-dateinput" id="planner-options-inputgroup-date">
                 <label class="input-group-addon planner-options-input-addon" for="planner-options-date">Datum</label>
-                <input id="planner-options-date" type="date" title="datum" aria-described-by="planner-options-dateformat" aria-required="true" class="form-control" required="required" min="2014-03-08" max="2014-04-01" value="2014-03-08">
-                <div class="input-group-addon planner-options-input-addon" id="planner-options-dateformat">mm-dd-jj
-                </div>
+                <input id="planner-options-date" type="date" title="datum" aria-described-by="planner-options-dateformat" aria-required="true" class="form-control" required="required" min="2014-03-08" max="2014-04-01" value="2014-03-08" />
+                <div class="input-group-addon planner-options-input-addon" id="planner-options-dateformat">mm-dd-jjjj</div>
               </div>
             </div>
           </div>
@@ -70,12 +69,12 @@
     <div class="container planner-advice-container" id="planner-advice-container">
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 hidden-print">
-          <div class="btn-group-vertical" id ="planner-advice-list" data-toggle="buttons">
-          </div>
-      </div>
-      <div class="clearfix visible-xs"></div>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"><ul class="list-group" id="planner-leg-list">
-          </ul>      
+          <div class="btn-group-vertical" id ="planner-advice-list" data-toggle="buttons"></div>
+        </div>
+        <div class="clearfix visible-xs"></div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+          <ul class="list-group" id="planner-leg-list"></ul>
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
