--- a/index.html
+++ b/index.html
@@ -2,41 +2,40 @@
 
 <html lang="nl">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>1313 Reisplanner</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script type="text/javascript" src="dist/js/modernizr.custom.05247.js"></script>
-    <link rel="stylesheet" href="assets/css/jquery-ui-1.10.3.custom.min.css">
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/1313.css">
+    <link rel="stylesheet" href="assets/css/jquery-ui-1.10.3.custom.min.css" />
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/1313.css" />
   </head> 
   <body>
     <div class="container">
       <div class="plannerpanel planner-options planner-form" id="planner-options-panel">
         <form role="form" class="planner-options-form validateDontSubmit" id="planner-options-form">
           <div class="input-group input-group-lg planner-options-inputgroup-from" id="planner-options-inputgroup-from">
-            <label class="input-group-addon planner-options-input-addon required" for="planner-options-from">Van</label>
+            <label class="input-group-addon planner-options-input-addon required label-from" for="planner-options-from">Van</label>
             <input id="planner-options-from" type="text" title="Van" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required" />
             <input id="planner-options-from-latlng" type="hidden" />
           </div>
           <div class="input-group input-group-lg hidden" aria-hidden="true" id="planner-options-inputgroup-via">
-            <label class="input-group-addon planner-options-input-addon" for="planner-options-via">Via</label>
+            <label class="input-group-addon planner-options-input-addon label-via" for="planner-options-via">Via</label>
             <input id="planner-options-via" type="text" title="Via" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" />
             <div id="planner-options-via-autocompletecontainer"></div>
             <input id="planner-options-via-latlng" type="hidden" />
           </div>
           <div class="input-group input-group-lg planner-options-inputgroup-dest" id="planner-options-inputgroup-dest">
-            <label class="input-group-addon planner-options-input-addon required" for="planner-options-dest">Naar</label>
+            <label class="input-group-addon planner-options-input-addon required label-dest" for="planner-options-dest">Naar</label>
             <input id="planner-options-dest" type="text" title="Naar" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required" />
             <input id="planner-options-dest-latlng" type="hidden" />
           </div>
           <div class="row">
             <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
               <div class="input-group input-group-lg planner-options-dateinput" id="planner-options-inputgroup-time">
-                <label class="input-group-addon planner-options-input-addon" for="planner-options-time">Tijd</label>
+                <label class="input-group-addon planner-options-input-addon label-time" for="planner-options-time">Tijd</label>
                 <input id="planner-options-time" type="time" title="Tijd" aria-described-by="planner-options-timeformat" aria-required="true" class="form-control" required="required" />
-                <div class="input-group-addon planner-options-input-addon" id="planner-options-timeformat">hh:mm
-                </div>
+                <div class="input-group-addon planner-options-input-addon" id="planner-options-timeformat">hh:mm</div>
               </div>
             </div>
           </div>
@@ -44,7 +43,7 @@
           <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
               <div class="input-group input-group-lg planner-options-dateinput" id="planner-options-inputgroup-date">
-                <label class="input-group-addon planner-options-input-addon" for="planner-options-date">Datum</label>
+                <label class="input-group-addon planner-options-input-addon label-date" for="planner-options-date">Datum</label>
                 <input id="planner-options-date" type="date" title="datum" aria-described-by="planner-options-dateformat" aria-required="true" class="form-control" required="required" min="2014-03-08" max="2014-04-01" value="2014-03-08" />
                 <div class="input-group-addon planner-options-input-addon" id="planner-options-dateformat">mm-dd-jjjj</div>
               </div>
@@ -52,7 +51,7 @@
           </div>
           <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-              <button class="btn-default btn-lg planner-options-submitbutton" id="planner-options-submit" type="submit" data-loading-text="Bezig...">Plan reis</button>
+              <button class="btn-default btn-lg planner-options-submitbutton label-plan" id="planner-options-submit" type="submit" data-loading-text="Bezig...">Plan reis</button>
             </div>
           </div>
         </form>
@@ -60,7 +59,7 @@
           <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9" id="planner-options-desc"></div>
           <div class="clearfix visible-xs"></div>
           <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-            <button class="btn-default btn-lg hidden-print" id="planner-options-edit" type="submit" onclick="showForm();">Wijzig reis</button>
+            <button class="btn-default btn-lg hidden-print label-edit" id="planner-options-edit" type="submit" onclick="showForm();">Wijzig reis</button>
           </div>
         </div>
       </div>
@@ -81,6 +80,7 @@
     <script type="text/javascript" src="assets/js/jquery-ui-1.10.3.custom.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery-scrollto.js"></script>
     <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/locale/nl.js"></script>
     <script type="text/javascript" src="assets/js/Form.js"></script>
   </body>
 
