Fixes in translation

--- a/index.fy.html
+++ b/index.fy.html
@@ -26,8 +26,8 @@
             <input id="planner-options-via-latlng" type="hidden" />
           </div>
           <div class="input-group input-group-lg planner-options-inputgroup-dest" id="planner-options-inputgroup-dest">
-            <label class="input-group-addon planner-options-input-addon required label-dest" for="planner-options-dest">Naar</label>
-            <input id="planner-options-dest" type="text" title="Naar" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required" />
+            <label class="input-group-addon planner-options-input-addon required label-dest" for="planner-options-dest">Nei</label>
+            <input id="planner-options-dest" type="text" title="Nei" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" required="required" />
             <input id="planner-options-dest-latlng" type="hidden" />
           </div>
           <div class="row">
@@ -59,7 +59,7 @@
           <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9" id="planner-options-desc"></div>
           <div class="clearfix visible-xs"></div>
           <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-            <button class="btn-default btn-lg hidden-print label-edit" id="planner-options-edit" type="submit" onclick="showForm();">Wizig reis</button>
+            <button class="btn-default btn-lg hidden-print label-edit" id="planner-options-edit" type="submit" onclick="showForm();">Wizigje reis</button>
           </div>
         </div>
       </div>
