--- a/index.fy.html
+++ b/index.fy.html
@@ -20,8 +20,8 @@
             <input id="planner-options-from-latlng" type="hidden" />
           </div>
           <div class="input-group input-group-lg hidden" aria-hidden="true" id="planner-options-inputgroup-via">
-            <label class="input-group-addon planner-options-input-addon label-via" for="planner-options-via">Via</label>
-            <input id="planner-options-via" type="text" title="Via" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" />
+            <label class="input-group-addon planner-options-input-addon label-via" for="planner-options-via">Fia</label>
+            <input id="planner-options-via" type="text" title="Fia" aria-required="true" class="form-control" placeholder="Station, halte, adres" x-webkit-speech="x-webkit-speech" />
             <div id="planner-options-via-autocompletecontainer"></div>
             <input id="planner-options-via-latlng" type="hidden" />
           </div>
