--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>1313 Reisplanner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script type="text/javascript" src="dist/js/modernizr.custom.05247.js"></script>
+    <link rel="stylesheet" href="assets/css/bootstrap/jquery-ui-1.10.3.custom.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/jquery-ui-1.10.3.theme.css">
     <link rel="stylesheet" href="assets/css/jquery-ui-1.10.3.custom.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/1313.css">
@@ -44,7 +46,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
               <div class="input-group input-group-lg planner-options-dateinput" id="planner-options-inputgroup-date">
                 <label class="input-group-addon planner-options-input-addon label-date" for="planner-options-date">Datum</label>
-                <input id="planner-options-date" type="date" title="datum" aria-described-by="planner-options-dateformat" aria-required="true" class="form-control" required="required" min="2014-03-08" max="2014-04-01" value="2014-03-08" />
+                <input id="planner-options-date" type="text" title="datum" aria-described-by="planner-options-dateformat" aria-required="true" class="form-control" required="required" min="2014-03-08" max="2014-04-31" value="2014-03-08" />
                 <div class="input-group-addon planner-options-input-addon" id="planner-options-dateformat">mm-dd-jjjj</div>
               </div>
             </div>
@@ -77,7 +79,7 @@
       </div>
     </div>
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery-scrollto.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/locale/nl.js"></script>
