--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <html lang="nl">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>1313 Reisplanner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script type="text/javascript" src="dist/js/modernizr.custom.05247.js"></script>
+    <!--[if lt IE 9]>
+        <script src="assets/js/html5shiv.js"></script>
+        <script src="assets/js/respond.min.js"></script>
+    <![endif]-->
     <link rel="stylesheet" href="assets/css/bootstrap/jquery-ui-1.10.3.custom.css">
     <link rel="stylesheet" href="assets/css/bootstrap/jquery-ui-1.10.3.theme.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -42,7 +47,7 @@
           </div>
           <!-- row -->
           <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="col-xs-8 col-sm-6 col-md-6 col-lg-6">
               <div class="input-group input-group-lg planner-options-dateinput" id="planner-options-inputgroup-date">
                 <label class="input-group-addon planner-options-input-addon label-date" for="planner-options-date">Datum</label>
                 <input id="planner-options-date" type="text" title="datum" aria-label="Datumkiezer, gebruik Ctrl en pijltjes om te navigeren" aria-required="true" class="form-control" required="required"  />
@@ -81,7 +86,7 @@
     <script type="text/javascript" src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery-scrollto.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/locale/en.js"></script>
+    <script type="text/javascript" src="assets/locale/nl.js"></script>
     <script type="text/javascript" src="assets/js/config.js"></script>
     <script type="text/javascript" src="assets/js/Form.js"></script>
   </body>
