--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>1313 Reisplanner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script type="text/javascript" src="dist/js/modernizr.custom.05247.js"></script>
-    <!--[if lt IE 9]>
-        <script src="assets/js/html5shiv.js"></script>
-        <script src="assets/js/respond.min.js"></script>
-    <![endif]-->
     <link rel="stylesheet" href="assets/css/bootstrap/jquery-ui-1.10.3.custom.css">
     <link rel="stylesheet" href="assets/css/bootstrap/jquery-ui-1.10.3.theme.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -86,7 +82,7 @@
     <script type="text/javascript" src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery-scrollto.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/locale/nl.js"></script>
+    <script type="text/javascript" src="assets/locale/en.js"></script>
     <script type="text/javascript" src="assets/js/config.js"></script>
     <script type="text/javascript" src="assets/js/Form.js"></script>
   </body>
