--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -11,8 +10,28 @@
     <link rel="stylesheet" href="assets/css/bootstrap/jquery-ui-1.10.3.theme.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/1313.css">
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
   </head>
   <body>
+    <nav class='navbar navbar-default'>
+      <div class='container-fluid'>
+        <ul class='nav navbar-nav'>
+          <li>
+            <a href='/'>Home</a>
+          </li>
+          <li>
+            <a href='/map'>Map</a>
+          </li>
+          <li>
+            <a href='/routing'>Get Directions</a>
+          </li>
+          <li>
+            <a href='/about'>About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="container">
       <div class="plannerpanel planner-options planner-form" id="planner-options-panel">
         <form role="form" class="planner-options-form validateDontSubmit" id="planner-options-form">
@@ -84,6 +103,7 @@
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/locale/en.js"></script>
     <script type="text/javascript" src="assets/js/config.js"></script>
+    <script type="text/javascript" src="dist/js/polyline.js"></script>
     <script type="text/javascript" src="assets/js/Form.js"></script>
   </body>
 
